openshift/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ivolve-app-service
spec:
  selector:
    app: ivolve-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
