openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ivolve-route
spec:
  to:
    kind: Service
    name: ivolve-app-service
  port:
    targetPort: 8081
  tls:
    termination: edge
  wildcardPolicy: None
